# libabmp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
example/: CMakeLists.txt  main.c
include/: abitmap.h  abmp.h
src/: abmp.c  create.c  file_read.c  file_write.c  get.c  read.c  write.c
